<resources>
    <string name="app_name">Bhai Madad Chahiye</string>

    <!-- Strings required for App -->
    <string name="google_app_id">740202396106</string>

    <!-- Strings related to Login -->
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_email">Enter your E-mail Id</string>
    <string name="register_name">Enter your full name</string>
    <string name="phoneNumber">Enter your Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="back_to_login">Back to Login</string>

    <!-- Strings related to Questions -->
    <string name="tags">Tags</string>
    <string name="title">Title</string>
    <string name="answer">Provide your Answer here</string>
    <string name="body">Body</string>
    <string name="post_question">Post Question</string>
    <string name="post_answer">Post Answer</string>

    <!-- Strings related to Users -->
    <string name="details">User Profile</string>
    <string name="registered_at">Registered at</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>

    <!-- Strings required for Notification -->
    <string name="location_updated_message">Location Successfully Updated</string>

    <string name="no_data_available">Sorry, nothing to display</string>
    <string name="toolbar">Bhai...</string>


    <string name="button_feedback">Send feedback</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">bhai@bhaimadadchahie.club</string>
    <string name="mail_feedback_subject">Feedback on your app</string>
    <string name="mail_feedback_message">Hi, \n\n I would like to give you some feedback:</string>

    <string name="about_us">This is th official Bhai Madad Chahiye App.\n\nIt is still
        evolving and we are committed to making it better each day.</string>

    <string name="user_profile">User Profile</string>
    <string name="action">Action</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="feedback">Feel free to give a Feedback!</string>
    <string name="developed_by">Developed By:\n\n Vishal Chandak</string>


    <string name="intro1">New to a place?\nNeed Help?</string>
    <string name="intro2">Are you confused?</string>
    <string name="intro3">No need to panic..\nWe are here to help</string>
    <string name="intro4">Find Help Instantly</string>

</resources>